Some more final improvements
